# V-AI-Code

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: README.md
.claude/agents/: ai-engineer.md  backend-engineer.md  devops-engineer.md  frontend-engineer.md
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  security.yml
.opencode/: opencode.json
.opencode/agents/: ai-engineer.md  backend-engineer.md  devops-engineer.md  frontend-engineer.md  mlops-engineer.md  qa-security-reviewer.md  uiux-reviewer.md
.opencode/commands/: ai-evaluate.md  check.md  design-sync.md  generate-client.md  review.md
ai/: README.md  config.yaml  pyproject.toml
ai/scripts/: evaluate.py
ai/src/: config.py  data.py  evaluate.py  main.py  pretrain.py  registry.py  train.py
ai/tests/: test_ai.py
be/: alembic.ini  pyproject.toml
be/migrations/: env.py
be/migrations/versions/: 0001_initial.py
be/src/: main.py
be/src/ai/: __init__.py  contracts.py
be/src/ai/observability/: __init__.py  langfuse.py
be/src/ai/providers/: __init__.py  litellm.py  mock.py
be/src/ai/retrieval/: __init__.py  contracts.py
be/src/api/: deps.py
be/src/api/v1/: router.py
be/src/api/v1/endpoints/: ai_jobs.py  auth.py  health.py
be/src/auth/: __init__.py  keycloak.py
be/src/core/: config.py  errors.py  lifespan.py  logging.py
be/src/database/: __init__.py  models.py  session.py
be/src/modules/ai_jobs/: __init__.py  schemas.py
be/src/queues/: __init__.py  redis_queue.py
be/src/services/: README.md  __init__.py  ai_inference_service.py  ai_job_service.py
be/tests/: conftest.py  test_ai_runtime.py  test_auth.py  test_health.py  test_security.py
data/: README.md
design/opendesign/: README.md
docs/adr/: 0001-modular-monorepo.md  0002-keycloak-identity.md  0003-online-offline-ai-split.md
docs/ai/: README.md  evaluation.md  model-selection.md  retrieval.md  serving.md  training.md
docs/api/: auth.md
docs/architecture/: README.md  auth-keycloak.md  deployment.md
docs/compliance/: ai-use-disclosure.md  data-provenance.md  dependency-policy.md  model-card.md  (+1 more)
fe/: eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
scripts/: export_openapi.py
worker/: pyproject.toml
worker/src/: job_queue.py  job_store.py  main.py  settings.py
worker/tests/: test_queue.py
(+60 files in other folders)
