[project]
name = "vai-code-training"
version = "0.1.0"
description = "Offline data, training, pretraining, evaluation, and model registry workspace"
requires-python = ">=3.12,<3.15"
dependencies = [
  "pydantic>=2.10.0,<3",
  "pyyaml>=6.0.0,<7"
]

[dependency-groups]
dev = ["pytest>=8.3.0,<10", "ruff>=0.9.0,<1"]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
