[project]
name = "vai-code-be"
version = "0.1.0"
description = "VAI Code FastAPI backend"
requires-python = ">=3.12,<3.15"
dependencies = [
  "alembic>=1.16.0,<2",
  "asyncpg>=0.30.0,<1",
  "email-validator>=2.2.0,<3",
  "fastapi>=0.128.0,<0.129",
  "httpx>=0.28.0,<1",
  "langfuse>=3.0.0,<4",
  "pydantic-settings>=2.7.0,<3",
  "PyJWT[crypto]>=2.10.0,<3",
  "python-multipart>=0.0.20,<1",
  "redis>=6.0.0,<7",
  "sqlalchemy[asyncio]>=2.0.36,<3",
  "structlog>=25.4.0,<26",
  "uvicorn[standard]>=0.34.0,<1"
]

[dependency-groups]
dev = [
  "aiosqlite>=0.20.0,<1",
  "mypy>=1.15.0,<3",
  "pytest>=8.3.0,<9",
  "pytest-asyncio>=0.25.0,<1",
  "ruff>=0.9.0,<1"
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "-ra"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
extend-ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = []
