[project]
name = "vai-code-worker"
version = "0.1.0"
description = "VAI Code background worker"
requires-python = ">=3.12,<3.15"
dependencies = [
  "asyncpg>=0.30.0,<1",
  "httpx>=0.28.0,<1",
  "langfuse>=3.0.0,<5",
  "pydantic>=2.10.0,<3",
  "pydantic-settings>=2.7.0,<3",
  "redis>=6.0.0,<7",
  "sqlalchemy[asyncio]>=2.0.36,<3",
  "structlog>=25.4.0,<26"
]

[dependency-groups]
dev = [
  "aiosqlite>=0.20.0,<1",
  "pytest>=8.3.0,<9",
  "pytest-asyncio>=0.25.0,<1",
  "ruff>=0.9.0,<1"
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
